# nice

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: docker-build-push.yml  rust-build-test.yml  rust.yml
api/: Cargo.toml  Dockerfile
api/src/: field_queue.rs  helpers.rs  main.rs
client/: Cargo.toml  Dockerfile  Dockerfile.runtime  gpu.Dockerfile
client/src/: main.rs
common/: Cargo.toml  build.rs
common/src/: alternating_sum_filter.rs  base_range.rs  benchmark.rs  client_api.rs  client_api_async.rs  client_api_sync.rs  client_process.rs  client_process_experimental.rs  client_process_gpu.rs  consensus.rs  db_util.rs  distribution_stats.rs  expand_stats.rs  fixed_width.rs  generate_chunks.rs  generate_fields.rs  lib.rs  lsd_filter.rs  msd_prefix_filter.rs  number_stats.rs  residue_filter.rs  stride_filter.rs
common/src/cuda/: nice_kernels.cu
common/src/db_util/: base.rs  bases.rs  cache.rs  chunk.rs  chunks.rs  claim.rs  claims.rs  consensus.rs  conversions.rs  field.rs  fields.rs  mod.rs  submission.rs  submissions.rs
daemon/: Cargo.toml
daemon/src/: main.rs
docker/: bookworm.Dockerfile  bullseye.Dockerfile  trixie.Dockerfile
docs/: ALTERNATING_SUM_FILTER.md
experiment/: Cargo.toml
experiment/src/: main.rs
gpu-client/: Cargo.toml  IMPLEMENTATION.md  README.md
gpu-client/src/: main.rs
jobs/: Cargo.toml
jobs/src/: main.rs
msd_experiment/: Cargo.toml  README.md  base_efficacy.py  visualize.py
msd_experiment/src/: compute.rs  db.rs  main.rs
msd_filter_effectiveness/: Cargo.toml  plot.py
msd_filter_effectiveness/src/: main.rs
proofs/: Nice.lean  README.md  lake-manifest.json  lakefile.toml
schema/: functions.sql  schema.sql
scripts/: admin_insert_fields.rs  base_bounds.rs  chunk_stats.rs  consensus.rs  downsample.rs  filter_effectiveness.rs  filter_effectiveness_chart.py  filter_stats.rs  find_msd_benchmark_ranges.rs  gaussian.py  generate_chunks.rs  generate_fields.rs  insert_new_fields.rs  inspect_number.py  msd_crosscheck.rs  naive_base_search.rs  progress_charts.py  radix_tree_search.rs  search_progress.rs  update_consensus_all.rs  update_downsampling_all.rs
wasm-client/: Cargo.toml
wasm-client/src/: lib.rs
web/: index.html
web-client/: .gitignore  Cargo.toml  QUICKSTART.md  README.md  WEB_WORKER_GUIDE.md  build.sh  debug.html  index-worker.html  index.html  run-worker.sh  run.sh  serve.py  test-worker.sh  worker.js
web-client/src/: lib.rs
web/search/: index.html  worker-pool.js  worker.js
