[workspace]
resolver = "2"
members = ["api", "client", "common", "daemon", "jobs", "wasm-client"]

[workspace.package]
version = "3.2.2"
edition = "2021"
authors = ["wasabipesto <nice@wasabipesto.com>"]
repository = "https://github.com/wasabipesto/nice"
readme = "README.md"
license-file = "LICENSE"

[workspace.dependencies]
nice_common = { path = "common" }
