[workspace]
resolver = "2"
members = ["api", "client", "common", "daemon", "jobs", "wasm-client"]

[workspace.package]
version = "3.2.7"
edition = "2024"
authors = ["wasabipesto <nice@wasabipesto.com>"]
repository = "https://github.com/wasabipesto/nice"
readme = "README.md"
license-file = "LICENSE"

[workspace.dependencies]
nice_common = { path = "common" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = false
