[package]
name = "nice_api"
version = "3.2.1"
edition = "2021"
authors = ["wasabipesto <nice@wasabipesto.com>"]
description = "an api for coordinating the search for square-cube pandigitals"
repository = "https://github.com/wasabipesto/nice"
readme = "README.md"
license-file = "../LICENSE"

[dependencies]
nice_common = { workspace = true, features = ["database", "rustls-tls"] }
chrono = { version = "0.4.42", features = ["serde"] }
rand = { version = "0.9.2" }
rocket = { version = "0.5.1", features = ["json"] }
