[package]
name = "nice_api"
description = "an api for coordinating the search for square-cube pandigitals"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license-file.workspace = true

[dependencies]
nice_common = { workspace = true, features = ["database", "rustls-tls"] }
chrono = { version = "0.4.42", features = ["serde"] }
rand = { version = "0.9.2" }
rocket = { version = "0.5.1", features = ["json"] }
