[package]
name = "nice_common"
version = "3.2.1"
edition = "2021"
authors = ["wasabipesto <nice@wasabipesto.com>"]
description = "common utilities for dealing with square-cube pandigitals"
repository = "https://github.com/wasabipesto/nice"
readme = "README.md"
license-file = "../LICENSE"

[features]
default = ["database", "network"]
database = ["dep:diesel", "dep:dotenvy"]
network = ["dep:openssl", "dep:reqwest"]

[dependencies]
bigdecimal = { version = "0.4.5" }
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
diesel = { version = "2.2", features = ["chrono", "postgres", "r2d2", "serde_json", "numeric"], optional = true }
dotenvy = { version = "0.15", optional = true }
itertools = { version = "0.14" }
malachite = { version = "0.6" }
malachite-nz = { version = "0.6", features = ["enable_serde"] }
openssl = { version = "0.10", features = ["vendored"], optional = true }
reqwest = { version = "0.12", features = ["blocking", "json"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
