[package]
name = "nice_common"
description = "common utilities for dealing with square-cube pandigitals"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license-file.workspace = true

[features]
database = ["dep:diesel", "dep:dotenvy", "dep:bigdecimal", "dep:rand"]
openssl-tls = ["reqwest/default-tls", "dep:openssl"]
rustls-tls = ["reqwest/rustls-tls"]

[dependencies]
bigdecimal = { version = "0.4.10", optional = true }
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
diesel = { version = "2.3", features = ["chrono", "postgres", "r2d2", "serde_json", "numeric"], optional = true }
dotenvy = { version = "0.15", optional = true }
itertools = { version = "0.14" }
malachite = { version = "0.8" }
malachite-nz = { version = "0.8", features = ["enable_serde"] }
openssl = { version = "0.10", features = ["vendored"], optional = true }
reqwest = { version = "0.12", features = ["blocking", "json"], optional = true, default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
rand = { version = "0.8", optional = true }
