[package]
name = "nice_daemon"
version = "3.2.1"
edition = "2021"
authors = ["wasabipesto <nice@wasabipesto.com>"]
description = "a daemon that fills your cores with niceness"
repository = "https://github.com/wasabipesto/nice"
readme = "README.md"
license-file = "../LICENSE"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
sysinfo = "0.30"
tokio = { version = "1.0", features = ["full"] }
num_cpus = "1.16"
