[package]
name = "nice_daemon"
description = "a daemon that fills your cores with niceness"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license-file.workspace = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
sysinfo = "0.30"
tokio = { version = "1.0", features = ["full"] }
num_cpus = "1.16"
