[package]
name = "nice_experiment"
description = "a client for distributed search of square-cube pandigitals"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license-file.workspace = true

[features]

[dependencies]
nice_common = { workspace = true }
clap = { version = "4.5", features = ["env", "derive"] }
env_logger = { version = "0.11" }
rayon = { version = "1.11" }
log = { version = "0.4" }
malachite = { version = "0.9" }
malachite-nz = { version = "0.9", features = ["enable_serde"] }
