[package]
name = "nice_jobs"
description = "scheduled jobs for the nice project"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license-file.workspace = true

[dependencies]
nice_common = { workspace = true, features = ["database", "network"] }
clap = { version = "4.5" }
