[package]
name = "msd_filter_effectiveness"
description = "a thin tool to measure the effectiveness of MSD filters"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license-file.workspace = true

[dependencies]
nice_common = { workspace = true }
