[package]
name = "msd_filter_effectiveness"
description = "a thin tool to measure the effectiveness of MSD filters"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license-file.workspace = true

[dependencies]
nice_common = { workspace = true }
anyhow = { version = "1.0" }
clap = { version = "4.5", features = ["derive"] }
rand = { version = "0.9" }
rayon = { version = "1.11" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
