[package]
name = "nice-wasm-client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wee_alloc = "0.4"
console_error_panic_hook = "0.1"
malachite = "0.4.14"
serde = { version = "1.0", features = ["derive"] }
itertools = { version = "0.14" }
serde_json = "1.0"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

# Tell `rustc` to optimize for small code size.
[profile.release]
opt-level = "s"
