[package]
name = "nice-wasm-client"
description = "a wasm version of the client for web browser support"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license-file.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
nice_common = { workspace = true }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]
