[package]
name = "nice-web-client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
wee_alloc = "0.4"
console_error_panic_hook = "0.1"
malachite = "0.4.14"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "Response",
  "RequestInit",
  "RequestMode",
  "Headers",
]

# Tell `rustc` to optimize for small code size.
[profile.release]
opt-level = "s"
